correccion de datos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <img src="img/atiq_logo.svg" alt="Atiq Logo" class="hero-logo">
             </div>
             <h1>Innovación que te reconoce.</h1>
-            <p class="welcome-message">¡Hola! Soy Atiq. ¿Listo para ver el futuro?</p>
-            <div class="button-container">
+            <p >¡Hola! Soy Atiq. ¿Listo para ver el futuro?</p>
+            <div class="hero-section" >
                 <a href="#" id="demo-btn" class="cta-button primary">PROBAR DEMO EN VIVO</a>
                 <a href="#" id="tour-btn" class="cta-button">INICIAR TOUR GUIADO</a>
             </div>
