--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AtiqTec - Innovación que te reconoce</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
 
     <div id="canvas-container"></div>
-
+    <canvas id="neural-network-canvas"></canvas>
     <main class="content">
 
         <!-- BOTÓN DE VOLVER (Oculto por defecto) -->
