--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+<script 
+  src="https://adminchat.atiqtec.com/embed.js" 
+  data-client-id="zA-oCnWPYVykV5WEpq5uba0q4tvFTgO9LJFSlAHQXBU"
+  data-app-id="atiq_web"
+  defer>
+</script>
 
     <div id="canvas-container"></div>
     <canvas id="neural-network-canvas"></canvas>
